2005-12-20  Adam Jocksch  <ajocksch@redhat.com>

	* InlineViewer.java (moveUp): Refactored to use createEllipsisAnchor in 
	InlineBuffer.java.
	(moveDown): Ditto.
	* InlineBuffer.java (createEllipsisAnchor): Added.
	* SourceViewWidget.java (setSubscopeAtCurrentLine): Refactored to use
	createAnchorAtCurrentLine method in SourceBuffer.
	(clearSubscopeAtCurrentLine): Refactored to use	clearAnchorAtCurrentLine
	in SourceBuffer.
	* SourceBuffer.java (createAnchorAtCurrentLine): Added.
	(clearAnchorAtCurrentLine): Added.

2005-12-14  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (SourceWindow): Removed initialization of IconManager.
	* SourceWindowFactory: Removed references to image paths since this is 
	now handled by IconManager.

	* SourceWindow.java (createSearchBar): Now pulls icons from stock,
	rather than from file.

2005-12-13  Adam Jocksch  <ajocksch@redhat.com>

	* SourceBuffer.java: Started then commented out new way of keeping track
	of the child anchors.
	* SourceWindow.java: Moved constants to IconManager.
 	(SourceWindow): Now calls IconManager to initialize the icons.
	(createActions): No longer creates icons.
	(createToolbar): Temporarily ditto, until IconManager can load these
	icons too.

2005-12-12  Adam Jocksch  <ajocksch@redhat.com>

	* PreferenceConstants.java: (Inline): Added values for the number of
	inline code levels to display and the default value for it.
	* InlineViewer.java (toggleChild): Now pulls the level of depth from the
	preferences model.
	(drawLineNumber): Needs to return (x) - 1 if we're showing ellipsis, not
	(x) + 1.

2005-12-09  Adam Jocksch  <ajocksch@redhat.com>

	* InlineBuffer.java (moveUp): Implemented details.
	* InlineViewer.java (moveUp): Ditto.

	* InlineViewer.java (moveDown): Now reparents the inlined code (if it
	exists) so that gtk doesn't clear it away when we change the text.
	* SourceViewWidget.java (toggleChild): Changed to use new getSource
	method in DOMFunction.